--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
     	<!-- Corps de la page -->
       <img src="D:\Black Games\Logo\Logo Black Games.png" class="Logo"/>
-      <img src="file:///D:\ProjetNSI\Logo PacMan.png" class="logo"/>
+      <img src="https://github.com/BlackSwordman5/Pac-Man/blob/main/Logo%20PacMan.png?raw=true" class="logo"/>
       <div>
          <a href="file:///D:\ProjetNSI\Jouer.html" class="play"><strong><span>PLAY</span></strong></a>
       </div>
