--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     	<!-- Corps de la page -->
-      <img src="D:\Black Games\Logo\Logo Black Games.png" class="Logo"/>
+      <img src="https://github.com/BlackSwordman5/Pac-Man/blob/main/Logo%20Black%20Games.png?raw=true" class="Logo"/>
       <img src="https://github.com/BlackSwordman5/Pac-Man/blob/main/Logo%20PacMan.png?raw=true" class="logo"/>
       <div>
          <a href="file:///D:\ProjetNSI\Jouer.html" class="play"><strong><span>PLAY</span></strong></a>
