--- a/Jouer.html
+++ b/Jouer.html
@@ -9,7 +9,7 @@
     <body>
       <section>
 
-       <h1><a href="file:///D:\ProjetNSI\Pac-Man.html"><img class="menu" src="file:///D:\ProjetNSI\Logo menu.png"/></a>Levels</h1>
+       <h1><a href="https://blackswordman5.github.io/Pac-Man/"><img class="menu" src="file:///D:\ProjetNSI\Logo menu.png"/></a>Levels</h1>
        <aside class="niveaux">
          <aside class="niveau">
           <a href="file:///D:\ProjetNSI\Easy.html" class="easy"> 
