--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="https://github.com/BlackSwordman5/Pac-Man/blob/main/Logo%20Black%20Games.png?raw=true" class="Logo"/>
       <img src="https://github.com/BlackSwordman5/Pac-Man/blob/main/Logo%20PacMan.png?raw=true" class="logo"/>
       <div>
-         <a href="https://github.com/BlackSwordman5/Pac-Man/blob/6656f3b88e6a36e48523c8d3514d0e6ee5fddcea/Jouer.html" class="play"><strong><span>PLAY</span></strong></a>
+         <a href="Jouer.html" class="play"><strong><span>PLAY</span></strong></a>
       </div>
     </body>
 </html>
