--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
     	<!-- Corps de la page -->
       <img src="https://github.com/BlackSwordman5/Pac-Man/blob/main/Logo%20Black%20Games.png?raw=true" class="Logo"/>
-      <img src="https://github.com/BlackSwordman5/Pac-Man/blob/main/Logo%20PacMan.png?raw=true" class="logo"/>
+      <img src="Logo Black Games.png" class="logo"/>
       <div>
          <a href="Jouer.html" class="play"><strong><span>PLAY</span></strong></a>
       </div>
