--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     	<!-- En-tête de la page -->
     	<meta charset="UTF-8" />
-      <link rel="stylesheet" type="text/css" href="Css.css">
+      <link rel="stylesheet" type="text/css" href="Css1.css">
     	<title>Pac-Man</title>
     </head>
     <body>
