--- a/Jouer.html
+++ b/Jouer.html
@@ -3,13 +3,13 @@
     <head>
     	<!-- En-tête de la page -->
     	<meta charset="UTF-8" />
-      <link rel="stylesheet" type="text/css" href="Css.css">
+      <link rel="stylesheet" type="text/css" href="Css1.css">
     	<title>Pac-Man</title>
     </head>
     <body>
       <section>
 
-       <h1><a href="https://blackswordman5.github.io/Pac-Man/"><img class="menu" src="file:///D:\ProjetNSI\Logo menu.png"/></a>Levels</h1>
+       <h1><a href="https://blackswordman5.github.io/Pac-Man/"><img class="menu" src="Logo menu.png"/></a>Levels</h1>
        <aside class="niveaux">
          <aside class="niveau">
           <a href="file:///D:\ProjetNSI\Easy.html" class="easy"> 
