--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
     	<!-- Corps de la page -->
-      <img src="Logo PacMan.png" class="Logo"/>
-      <img src="Logo Black Games.png" class="logo"/>
+      <img src="Logo Black Games.png" class="Logo"/>
+      <img src="Logo PacMan.png" class="logo"/>
       <div>
          <a href="Jouer.html" class="play"><strong><span>PLAY</span></strong></a>
       </div>
