--- a/Jouer.html
+++ b/Jouer.html
@@ -12,24 +12,24 @@
        <h1><a href="https://blackswordman5.github.io/Pac-Man/"><img class="menu" src="Logo menu.png"/></a>Levels</h1>
        <aside class="niveaux">
          <aside class="niveau">
-          <a href="file:///D:\ProjetNSI\Easy.html" class="easy"> 
+          <a href="Easy.html" class="easy"> 
           <strong><span>Easy</span></strong> </a>
-          <img src="file:///D:\ProjetNSI\niveau1.png" class="lvl1"/>
+          <img src="niveau1.png" class="lvl1"/>
          </aside>
          <aside class="niveau">
-          <a href="file:///D:\ProjetNSI\Normal.html" class="normal"> 
+          <a href="Normal.html" class="normal"> 
           <strong><span>Normal</span></strong> </a>
-          <img src="file:///D:\ProjetNSI\niveau2.png" class="lvl1"/>
+          <img src="niveau2.png" class="lvl1"/>
          </aside>
          <aside class="niveau">
-          <a href="file:///D:\ProjetNSI\Hard.html" class="hard"> 
+          <a href="Hard.html" class="hard"> 
           <strong><span>Hard</span></strong> </a>
-          <img src="file:///D:\ProjetNSI\niveau3.png" class="lvl1"/>
+          <img src="niveau3.png" class="lvl1"/>
          </aside>
          <aside class="niveau">
-          <a href="file:///D:\ProjetNSI\Spécial.html" class="easy"> 
+          <a href="Spécial.html" class="easy"> 
           <strong><span>Spécial</span></strong> </a>
-          <img src="file:///D:\ProjetNSI\niveau4.png" class="lvl1"/>
+          <img src="niveau4.png" class="lvl1"/>
          </aside>
        </aside>
       </section>
