--- a/Easy.html
+++ b/Easy.html
@@ -3,14 +3,14 @@
     <head>
     <!-- En-tête de la page -->
 	<meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="Css.css">
+    <link rel="stylesheet" type="text/css" href="Css1.css">
 	<title>Easy</title>
 </head>
 <body>
     <!-- Corps de la page -->
-    <h1><a href="file:///D:\ProjetNSI\Jouer.html"><img class="menu" src="file:///D:\ProjetNSI\Logo menu.png"/></a>Niveau 1</h1>
+    <h1><a href="Jouer.html"><img class="menu" src="Logo menu.png"/></a>Niveau 1</h1>
 	<aside class="niveau">
-		<a class="suivant" href="file:///D:\ProjetNSI\normal.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="file:///D:\ProjetNSI\fleche2.png"></a>
+		<a class="suivant" href="normal.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="fleche2.png"></a>
 	    <aside class="lvl1">
 			<h3 id="score"></h3>
 			<div class="niv" id="world"></div>
