--- a/Normal.html
+++ b/Normal.html
@@ -3,15 +3,15 @@
 <head>
     <!-- En-tête de la page -->
   	<meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="Css.css">
+    <link rel="stylesheet" type="text/css" href="Css1.css">
     <title>Normal</title>
 </head>
 <body>
     <!-- Corps de la page -->
-	<h1><a href="file:///D:\ProjetNSI\Jouer.html"><img class="menu" src="file:///D:\ProjetNSI\Logo menu.png"/></a>Niveau 2</h1>
+	<h1><a href="Jouer.html"><img class="menu" src="Logo menu.png"/></a>Niveau 2</h1>
 	<aside class="niveau">
-		<a class="precedent" href="file:///D:\ProjetNSI\Easy.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="file:///D:\ProjetNSI\fleche.png"></a>
-		<a class="suivant" href="file:///D:\ProjetNSI\Hard.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="file:///D:\ProjetNSI\fleche2.png"></a>
+		<a class="precedent" href="Easy.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="fleche.png"></a>
+		<a class="suivant" href="Hard.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="fleche2.png"></a>
 		<aside class="lvl1">
 			<h3 id="score"></h3>
 			<div class="niv2" id="world">	
