--- a/Hard.html
+++ b/Hard.html
@@ -9,10 +9,10 @@
 <body>
     	<!-- Corps de la page -->
     	
-		<h1><a href="file:///D:\ProjetNSI\Jouer.html"><img class="menu" src="file:///D:\ProjetNSI\Logo menu.png"/></a>Niveau 3</h1>
+		<h1><a href="Jouer.html"><img class="menu" src="Logo menu.png"/></a>Niveau 3</h1>
 		<aside class="niveau">
-		  <a class="precedent" href="file:///D:\ProjetNSI\Normal.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="file:///D:\ProjetNSI\fleche.png"></a>
-		  <a class="suivant" href="file:///D:\ProjetNSI\Spécial.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="file:///D:\ProjetNSI\fleche2.png"></a>
+		  <a class="precedent" href="Normal.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="fleche.png"></a>
+		  <a class="suivant" href="Spécial.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="fleche2.png"></a>
 		<aside class="lvl1"> 
 			<h3 id="score"></h3>
 			<div class="niv3" id="world"></div>
