--- a/Spécial.html
+++ b/Spécial.html
@@ -3,18 +3,15 @@
 <head>
     <!-- En-tête de la page -->
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="Css.css">
-	<script type="text/javascript">
-		var score = 0;
-	</script>
+    <link rel="stylesheet" type="text/css" href="Css1.css">
     <title>Easy</title>
 </head>
 <body>
     	<!-- Corps de la page -->
     	
-		<h1><a href="file:///D:\ProjetNSI\Jouer.html"><img class="menu" src="file:///D:\ProjetNSI\Logo menu.png"/></a>Niveau 4</h1>
+		<h1><a href="Jouer.html"><img class="menu" src="Logo menu.png"/></a>Niveau 4</h1>
 		<aside class="niveaus">
-		  <a class="precedent" href="file:///D:\ProjetNSI\Hard.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="file:///D:\ProjetNSI\fleche.png"></a>
+		  <a class="precedent" href="Hard.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="fleche.png"></a>
 		<aside class="lvls"> 
 			<h3 id="score"></h3>
 			<div class="niv4" id="world"></div>
