--- a/Hard.html
+++ b/Hard.html
@@ -11,7 +11,7 @@
     	
 		<h1><a href="Jouer.html"><img class="menu" src="Logo menu.png"/></a>Niveau 3</h1>
 		<aside class="niveau">
-		  <a class="precedent" href="Normal.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="fleche.png"></a>
+		  <a class="precedent" href="Normal.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="fleche.PNG"></a>
 		  <a class="suivant" href="Spécial.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="fleche2.png"></a>
 		<aside class="lvl1"> 
 			<h3 id="score"></h3>
