--- a/Normal.html
+++ b/Normal.html
@@ -10,7 +10,7 @@
     <!-- Corps de la page -->
 	<h1><a href="Jouer.html"><img class="menu" src="Logo menu.png"/></a>Niveau 2</h1>
 	<aside class="niveau">
-		<a class="precedent" href="Easy.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="fleche.png"></a>
+		<a class="precedent" href="Easy.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="fleche.PNG"></a>
 		<a class="suivant" href="Hard.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="fleche2.png"></a>
 		<aside class="lvl1">
 			<h3 id="score"></h3>
