--- a/Easy.html
+++ b/Easy.html
@@ -10,7 +10,7 @@
     <!-- Corps de la page -->
     <h1><a href="Jouer.html"><img class="menu" src="Logo menu.png"/></a>Niveau 1</h1>
 	<aside class="niveau">
-		<a class="suivant" href="normal.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="fleche2.png"></a>
+		<a class="suivant" href="Normal.html" ><strong><span>Niveau Suivant</span></strong><img class="fleche" src="fleche2.png"></a>
 	    <aside class="lvl1">
 			<h3 id="score"></h3>
 			<div class="niv" id="world"></div>
