--- a/Spécial.html
+++ b/Spécial.html
@@ -11,7 +11,7 @@
     	
 		<h1><a href="Jouer.html"><img class="menu" src="Logo menu.png"/></a>Niveau 4</h1>
 		<aside class="niveaus">
-		  <a class="precedent" href="Hard.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="fleche.png"></a>
+		  <a class="precedent" href="Hard.html" ><strong><span>Niveau Précédent</span></strong><img class="fleche" src="fleche.PNG"></a>
 		<aside class="lvls"> 
 			<h3 id="score"></h3>
 			<div class="niv4" id="world"></div>
