--- a/Normal.html
+++ b/Normal.html
@@ -289,7 +289,7 @@
 		}
 	}
 	function fin2(){
-		if (pacman == fantome){
+		if (map[fantome.y][fantome.x] === map[pacman.y][pacman.x]){
 			Perdu();
 		}
 	}
